# Raytracer

./: CMakeLists.txt  CMakeLists.txt.in  README.md
screenshots/: output.ppm
src/: Geometry.hh  IWorldObject.hh  Light.hh  Main.cc  Material.hh  Raytracer.cc  Raytracer.hh  Sphere.cc  Sphere.hh  geometry.h  geometry.hh  intersection.h  light.h  main.cc  material.h  ray.h  raytracer.cc  raytracer.h  sphere.cc  sphere.h
tests/: Raytracertest.cc  raytracertest.cc
